--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </h1>
             <img class="hero-pic-r" src="./pics/small_pics/memoli/IMG_5085-min.JPG" alt="" />
             <p class="pr1">
-              為美而生的攝影空間，在台北也能<br class="mobile-break"/>遇見世界的格調。<br class="desktop-break">您留下的不只是<br class="mobile-break"/>照片，而是永恆的回憶。
+              為美而生的攝影空間，在台北也能<br class="mobile-break"/>遇見世界的格調<br class="desktop-break">您留下的不只是<br class="mobile-break"/>照片，而是永恆的回憶
             </p>
             <p class="pr2">
               Every shoot, every smile, every memory —<br class="mobile-break"/>beautifully
@@ -101,20 +101,22 @@
       <article class="page2">
         <div class="wrapper-p2">
           <section class="p2-l">
-            <h2>About</h2>
-            <p class="pr1">
-              在台北，為您預留一隅溫柔的白</p>
-            <p class="pr2">
-              這裡的光影，如同首爾午後的暖陽，靜靜地襯托您的純粹之美 
-              <!-- 為美而生的攝影空間，在台北也能<br />遇見世界的格調。您留下的不只是<br />照片，而是永恆的回憶。 -->
-            </p>
-            <p class="pr3">
-              我們封存的不只是照片，而是將美好氛圍感拉滿的每一刻心動。 
-            </p>
-            <a class="herop2button" href="./about.html">查看更多</a>
+            <div class="wrapper-p2-text">
+              <h2>About</h2>
+              <p class="pr1">
+                在台北，為您預留一隅溫柔的白</p>
+              <p class="pr2">
+                這裡的光影，如同首爾午後的暖陽，靜靜地襯托您的純粹之美 
+                <!-- 為美而生的攝影空間，在台北也能<br />遇見世界的格調。您留下的不只是<br />照片，而是永恆的回憶。 -->
+              </p>
+              <p class="pr3">
+                我們封存的不只是照片，而是將美好氛圍感拉滿的每一刻心動。 
+              </p>
+              <a class="herop2button" href="./about.html">查看更多</a>
+            </div>
           </section>
           <section class="p2-r">
-            <img class="p2imgr" src="./pics/small_pics/memoli/IMG_5086-min.JPG" alt="p2pic" />
+            <img class="p2imgr" src="./pics/small_pics/memoli/IMG_5093-min.JPG" alt="p2pic" />
           </section>
         </div>
       </article>
